# tiresias

./: .gitignore  EXECUTION_PLAN.md  HANDOFF.md  README.md  pyproject.toml
artifacts/: baseline_rf.joblib
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  colors.ts  format.ts  hooks.ts  main.tsx  theme.css  types.ts
dashboard/src/components/: BandwidthChart.tsx  FlowTable.tsx  Header.tsx  Legend.tsx  StatTiles.tsx
docs/: dataset.md
reports/: eval_baseline.md
scripts/: collect_session.sh
src/tiresias/: __init__.py  config.py  logging_setup.py
src/tiresias/api/: server.py
src/tiresias/capture/: agent.py  tls_detect.py
src/tiresias/features/: extract.py  labeling.py  tls.py
src/tiresias/flows/: assembler.py  io.py  key.py  record.py
src/tiresias/models/: dataset.py  evaluate.py  registry.py  split.py  train_baseline.py
src/tiresias/pipeline/: scored.py  scorer.py  sources.py  stats.py
src/tiresias/scripts/: build_dataset.py  capture_to_disk.py  gen_synthetic_dataset.py  train.py
src/tiresias/synth/: generate.py  tls_bytes.py
tests/: conftest.py  test_api.py  test_assembler.py  test_capture_integration.py  test_config.py  test_features.py  test_flow_key.py  test_labeling.py  test_model_pipeline.py  test_scorer_stats.py  test_synth_dataset.py  test_tls_detect.py  test_tls_parse.py
